Fixed horizontal scroll on quick-recharge page

--- a/src/app/recharge/pages/quick-recharge/quick-recharge.component.scss
+++ b/src/app/recharge/pages/quick-recharge/quick-recharge.component.scss
@@ -818,9 +818,13 @@ font-family: "Montserrat";
     }
 
     .boxborderright {
-        padding: 0 16px;
+        padding: 0 5px;
         border-right: none !important;
         /*border-bottom: #e4e4e4 1px solid;*/
+    }
+
+    .radio_checkbox_wraper1 .col-md-12 {
+        padding: 0 5px;
     }
 
     .form_label1 {
@@ -877,9 +881,7 @@ font-family: "Montserrat";
     }
 
     .margin_class {
-        margin-top: 0px !important;
-        margin-bottom: 0px !important;
-
+        margin: 0px !important;
     }
 
     .submitButtonSmall {
